--- a/static/css/adv-search.css
+++ b/static/css/adv-search.css
@@ -123,6 +123,7 @@ input[type=submit]:active {
 
 .select-options {
     position: absolute;
+    height: 150px;
     top: 100%;
     right: 0;
     left: 0;
@@ -134,6 +135,22 @@ input[type=submit]:active {
     border-radius: 4px;
     background-color: #fff;
     box-shadow: 0 10px 16px rgba(68, 104, 194, 0.18);
+    overflow: auto;
+}
+
+.select-options::-webkit-scrollbar {
+    width: 6px;
+    border-radius: 10px;
+}
+
+.select-options::-webkit-scrollbar-track {
+    background-color: #e4e4e4;
+    border-radius: 10px;
+}
+
+.select-options::-webkit-scrollbar-thumb {
+    background: var(--select-color);
+    border-radius: 10px;
 }
 
 .select-options li {
