--- a/static/css/my-reviews.css
+++ b/static/css/my-reviews.css
@@ -28,6 +28,8 @@
     text-align: left;
     font-family: var(--body-font);
     font-weight: 400;
+    padding-bottom: 0;
+    margin-bottom: 0;
     color: var(--theme-color);
 }
 
@@ -48,5 +50,173 @@
     .card-text,
     .card-footer {
         font-size: 13px;
+    }
+}
+
+.pagination {
+    background: transparent;
+    margin: 2rem auto;
+    justify-content: center;
+    text-align: center;
+}
+
+.pagination:after {
+    clear: both;
+    content: "";
+    display: table;
+}
+
+.pagination ul {
+    width: 100%;
+}
+
+.pagination {
+    width: 45rem;
+}
+
+.pagination ul, li {
+    list-style: none;
+    display: inline;
+    padding-left: 0;
+}
+
+
+.pagination li:hover a {
+    color: var(--main-bg);
+    background-color: var(--theme-color);
+    border: solid 1px var(--theme-color);
+}
+
+.pagination li.active a {
+    color: var(--main-bg);
+    background-color: var(--theme-color);
+    border: solid 1px var(--theme-color);
+}
+
+.pagination li a {
+    border: solid 1px var(--inactive-color);
+    border-radius: 0.2rem;
+    color: var(--content-title-color);
+    text-decoration: none;
+    text-transform: uppercase;
+    display: inline-block;
+    text-align: center;
+    padding: 0.5rem 0.9rem;
+    margin-right: 10px;
+}
+
+.pagination li a {
+    display: none;
+}
+
+.pagination li.previous:first-child a {
+    display: inline-block;
+}
+
+.pagination li.previous:first-child a:after {
+    content: "Previous";
+}
+
+.pagination li:nth-child(2) a {
+    display: inline-block;
+}
+
+.pagination li:nth-child(3) a {
+    display: inline-block;
+}
+
+.pagination li:nth-child(4) a {
+    display: inline-block;
+}
+
+.pagination li:nth-child(5) a {
+    display: inline-block;
+}
+
+.pagination li:nth-child(6) a {
+    display: inline-block;
+}
+
+.pagination li:nth-child(7) a {
+    display: inline-block;
+}
+
+.pagination li:nth-child(8) a {
+    display: inline-block;
+}
+
+.pagination li.last:last-child a {
+    display: inline-block;
+}
+
+.pagination li.last:last-child a:after {
+    content: "Next";
+}
+
+.pagination li:nth-last-child(2) a {
+    display: inline-block;
+}
+
+.pagination li:nth-last-child(3) {
+    display: inline-block;
+}
+
+.pagination li:nth-last-child(3):after {
+    padding: 0 1rem;
+    content: "...";
+    margin-right: 5px;
+}
+
+
+@media screen and (max-width: 820px) {
+    .pagination {
+        width: 14rem;
+    }
+    .pagination li {
+        display: none;
+    }
+    .pagination li.active {
+        display: inline;
+    }
+    .pagination li:first-child {
+        display: inline;
+    }
+    .pagination li:first-child a:after {
+        content: "Prev";
+    }
+    .pagination li:last-child {
+        display: inline;
+    }
+    .pagination li:last-child a:after {
+        content: "Next";
+    }
+}
+
+@media screen and (max-width: 520px) {
+    .pagination {
+        width: 14rem;
+    }
+    .pagination li {
+        display: none;
+    }
+    .pagination li.active {
+        display: none;
+    }
+    .pagination li:first-child {
+        width: 50%;
+        display: inline;
+        margin-right: 5px;
+    }
+    .pagination li:first-child a:after {
+        content: "Previous";
+    }
+    .pagination li:last-child {
+        display: inline;
+    }
+    .pagination li:last-child a:after {
+        content: "Next";
+    }
+    .pagination li:nth-last-child(3):after {
+        display: none;
     }
 }
