--- a/templates/base.html
+++ b/templates/base.html
@@ -64,6 +64,7 @@
 	<footer>
 		<a href="{% url 'watchlist' %}" class="button my-watchlist"><i class="fa fa-list-ul" aria-hidden="true"></i>&nbsp;My Watchlist</a>
 		<a href="{% url 'my-reviews' %}" class="button my-reviews"><i class="fa fa-comment-o" aria-hidden="true"></i>&nbsp;My Reviews</a>
+		{% if user.is_superuser %}<a href="{% url 'all-reviews' %}" class="button all-reviews"><i class="fa fa-comment-o" aria-hidden="true"></i>&nbsp;All Reviews</a>{% endif %}
 		<a href="{% url 'logout' %}" class="button sign-out"><i class="fa fa-sign-out" aria-hidden="true"></i>&nbsp;Sign Out</a>
 {#		<label for="modal" class="button">Decline</label>#}
 	</footer>
