Allow to delete reviews

--- a/templates/watchlist.html
+++ b/templates/watchlist.html
@@ -174,7 +174,7 @@
 {% endif %}
 
 {% else %}
-<h4 style="position: absolute; left: 50%; top: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
+<h4 style="position: fixed; left: 50%; top: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
     Your watchlist is empty :(
 </h4>
 {% endif %}
