--- a/templates/all-reviews.html
+++ b/templates/all-reviews.html
@@ -17,8 +17,8 @@
         All Reviews &#160;<i class="fa fa-comment" aria-hidden="true" style="color: #FFBC0B"></i>
     </div>
 
+    {% if user.is_superuser %}
     <div id="MyReviews" class="row row-cols-1 row-cols-sm-2 row-cols-md-2">
-        {% if user.is_superuser %}
             {% for review in reviewPosts %}
         <div class="col">
             <div class="card mb-3">
@@ -55,37 +55,36 @@
             </div>
         </div>
             {% endfor %}
-        {% endif %}
     </div>
-
-    {% if is_paginated %}
-        {% if page_obj.has_other_pages %}
+        {% if is_paginated %}
+            {% if page_obj.has_other_pages %}
     <ul class="pagination">
-            {% if page_obj.has_previous %}
+                {% if page_obj.has_previous %}
         <li class="previous"><a href="?page={{ page_obj.previous_page_number }}"></a></li>
-            {% else %}
-        <li class="previous" style="display: none;"></li>
-            {% endif %}
-
-            {% for i in page_obj.paginator.page_range %}
-                {% if page_obj.number == i %}
-        <li class="active"><a href="?page={{ i }}">{{ i }}</a></li>
                 {% else %}
-        <li><a href="?page={{ i }}">{{ i }}</a></li>
+        <li class="previous" style="display: none;"></li>
                 {% endif %}
-            {% endfor %}
 
-            {% if page_obj.has_next %}
+                {% for i in page_obj.paginator.page_range %}
+                    {% if page_obj.number == i %}
+        <li class="active"><a href="?page={{ i }}">{{ i }}</a></li>
+                    {% else %}
+        <li><a href="?page={{ i }}">{{ i }}</a></li>
+                    {% endif %}
+                {% endfor %}
+
+                {% if page_obj.has_next %}
         <li class="last"><a href="?page={{ page_obj.next_page_number }}"></a></li>
-            {% else %}
+                {% else %}
         <li class="last" style="display: none;"></li>
-            {% endif %}
+                {% endif %}
     </ul>
+            {% endif %}
         {% endif %}
     {% endif %}
 
     <div id="NoReviews" class="content-section-title" style="text-align: center; font-size: 16px; position: relative; top: 50%; transform: translateY(-50%); margin: auto;">
-        No reviews for movies yet...
+        You have no power here!
     </div>
 {% endblock %}
 
