--- a/templates/base.html
+++ b/templates/base.html
@@ -77,6 +77,7 @@
         <div class="header-menu">
             <a class="menu-link" href="{% url 'genres' %}">Genres</a>
             <a class="menu-link" href="{% url 'specials' %}">Specials</a>
+            <a class="menu-link" href="{% url 'popular' %}">Popular</a>
             {% if user.is_authenticated %}
             <a class="menu-link" href="{% url 'logout' %}">Log Out</a>
             {% else %}
