--- a/templates/all-reviews.html
+++ b/templates/all-reviews.html
@@ -23,7 +23,7 @@
         <div class="col">
             <div class="card mb-3">
                 <div class="card-header theme-bg-fade">
-                    <form action="{% url 'result' %}" method="POST" class="movie-review" style="cursor: pointer;">
+                    <form action="{% url 'result' imdb%}" method="POST" class="movie-review" style="cursor: pointer;">
                         {% csrf_token %}
                         <input type="hidden" value="{{ review.movie }}" name="movie">
                         <span class="float-left mr-2 mt-1 h4-responsive robotoBold" style="color: var(--select-color);">
