--- a/templates/intro.html
+++ b/templates/intro.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <title>Intro Movie</title>
     <link rel="icon" href="{% static 'ico/logo.ico' %}" type="image/x-icon">
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
     <link rel="stylesheet"  href="{% static 'css/intro.css' %}">
 </head>
 <body>
@@ -14,6 +15,21 @@
     <input type="hidden" value="{{ title }}" name="movie">
     <input type="hidden" value="noIntro" name="intro">
 </form>
+
+
+<div id="mute-button" class='volume' style="right: 105px; top:12px;" onclick="jQuery('#intro').YTPMute();  document.getElementById('unmute-button').style.display = 'block'; this.style.display = 'none';">
+    <i class="fa fa-volume-up" style="font-weight: bold;"></i>
+</div>
+
+<div id="unmute-button" class='volume' style="right: 105px; top:12px; display: none;" onclick="jQuery('#intro').YTPUnmute(); document.getElementById('mute-button').style.display = 'block'; this.style.display = 'none';">
+    <i class="fa fa-volume-off" style="font-weight: bold;"></i>
+</div>
+
+<div id="skip-button" onclick='$("form").submit();'>
+    <span>skip&nbsp;</span>
+    <i class="fa fa-angle-double-right" style="font-weight: bold;"></i>
+</div>
+
 
 <div id="intro" class="mbYTPVideo inline_YTPlayer"
      data-property="{
@@ -25,7 +41,7 @@
         startAt:0,
         stopAt:0,
         mute:false,
-        vol:50,
+        vol:40,
         optimizeDisplay:true,
         showControls:false,
         printUrl:true,
@@ -39,7 +55,6 @@
         stopMovieOnBlur:true,
         remember_last_time:false}">
 </div>
-
 
 <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 <script src="{% static 'libs/YTPlayer.js' %}"></script>
