--- a/static/css/register.css
+++ b/static/css/register.css
@@ -1,38 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=RocknRoll+One&display=swap');
-
-:root {
-    --body-font: 'RocknRoll One', sans-serif;
-    --theme-color: #f9fafb;
-}
-
-* {
-    padding: 0;
-    margin: 0;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    outline: none;
-    box-sizing: border-box;
-}
-
-html {
-    box-sizing: border-box;
-    -webkit-font-smoothing: antialiased;
-}
-
 a {
     cursor: pointer;
 }
 
-body {
+p {
+    margin-bottom: 1rem;
+    padding: 0;
     font-family: var(--body-font);
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 2em;
-    width: 100%;
-    height: 100vh;
+    font-weight: 400;
+    font-size: 16px;
+}
+
+body {
     background: linear-gradient(#141e30, #243b55) center;
 }
 
@@ -75,7 +53,7 @@ input[type=number]:focus {
 }
 
 label {
-    color: var(--theme-color);
+    color: #F9FAFB;
     text-transform: uppercase;
     letter-spacing: 0.3px;
     font-size: 13px;
@@ -111,11 +89,13 @@ input[type=submit]:active {
 /* -------- MAIN STYLE FOR SIGN UP -------- */
 .sign-up {
     background: rgba(0,0,0,.5);
+    display: none;
     width: 800px;
     margin: 0 auto;
     box-sizing: border-box;
     box-shadow: 0 15px 25px rgba(0,0,0,.6);
     border-radius: 10px;
+    font-weight: 600;
 }
 
 @media (max-width: 992px) {
@@ -482,3 +462,45 @@ input[type=submit]:active {
         bottom: 100%;
     }
 }
+
+.errorlist {
+    display: none;
+}
+
+#mobBtn {
+    display: none;
+}
+
+.header {
+    display: none;
+}
+
+.content-wrapper {
+    padding: 40px 40px;
+    background-color: transparent;
+}
+
+.app {
+    background-color: transparent;
+    display: block;
+}
+
+@media (max-width: 600px) {
+    .content-wrapper {
+        padding: 0;
+    }
+
+     .sign-up {
+         width: fit-content;
+     }
+
+    .app {
+        height: 100%;
+        position: relative;
+        top: 50%;
+        -webkit-transform: translateY(-50%);
+            -ms-transform: translateY(-50%);
+                transform: translateY(-50%);
+    }
+}
+
