--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,23 +1,13 @@
+{% extends 'base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Sign In</title>
-    <link rel="icon" href="{% static 'ico/logo.ico' %}" type="image/x-icon">
+{% block title %}Sign In{% endblock %}
+
+{% block extrahead %}
     <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
     <link rel="stylesheet" href="{% static 'css/register.css' %}">
     <style>
         .sign-up {
             width: 450px;
-        }
-
-        @media (max-width: 450px) {
-            .sign-up {
-                width: fit-content;
-            }
         }
 
         .sign-up .container .sign-up-form .form-content .row-wrapper .username,
@@ -25,9 +15,9 @@
             flex-basis: 400px;
         }
     </style>
-</head>
+{% endblock %}
 
-<body>
+{% block content %}
 {% if form.errors %}
 <script>
     window.setTimeout(function() {
@@ -57,7 +47,6 @@
 </div>
   {% endif %}
 {% endif %}
-
 
 <form class="sign-up" id="myform" method="post" action="{% url 'login' %}">
     {% csrf_token %}
@@ -115,8 +104,14 @@
         </footer>
     </div>
 </form>
+{% endblock %}
 
-<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
-</body>
-</html>
+
+{% block extra_js %}
+<script>
+$(window).on("load",function(){
+     $('.app').css("display", "block");
+     $('.sign-up').css("display", "block");
+});
+</script>
+{% endblock extra_js %}
