--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,17 +1,30 @@
+{% extends 'base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Sign Up</title>
-    <link rel="icon" href="{% static 'ico/logo.ico' %}" type="image/x-icon">
-    <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
-    <link rel="stylesheet" href="{% static 'css/register.css' %}">
-</head>
+{% block title %}Sign Up{% endblock %}
 
-<body>
+{% block extrahead %}
+    <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="{% static 'css/register.css' %}">
+
+     <style>
+        .sign-up .container .sign-up-header, .sign-up .container .form-footer {
+            padding: 1rem 0;
+        }
+
+        .sign-up .container .sign-up-form .form-content .row-wrapper:not(:last-child) {
+            margin-bottom: 1rem;
+        }
+
+        @media (max-width: 600px) {
+            .app {
+                margin-bottom: 20px;
+            }
+        }
+
+    </style>
+{% endblock %}
+
+{% block content %}
 {% if form.errors %}
 <script>
     window.setTimeout(function() {
@@ -97,8 +110,13 @@
         </footer>
     </div>
 </form>
+{% endblock %}
 
-<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
-</body>
-</html>
+
+{% block extra_js %}
+<script>
+$(window).on("load",function(){
+     $('.sign-up').css("display", "block");
+});
+</script>
+{% endblock extra_js %}
