--- a/templates/errors/500.html
+++ b/templates/errors/500.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Internal Server Error - 500</title>
     <link rel="icon" href="{% static 'ico/logo.ico' %}" type="image/x-icon">
-    <link rel="stylesheet" href="{% static 'css/reset.min.css' %}">
+    <link rel="stylesheet" href="{% static 'libs/reset.min.css' %}">
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Dosis:400,300,500,800'>
     <link rel="stylesheet" href="{% static 'css/error.css' %}">
 </head>
