Fix login style

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -14,6 +14,12 @@
         .sign-up .container .sign-up-form .form-content .row-wrapper .pass1 {
             flex-basis: 400px;
         }
+
+         @media (max-width: 600px) {
+            .sign-up {
+                width: fit-content;
+            }
+        }
     </style>
 {% endblock %}
 
