--- a/static/css/main-style.css
+++ b/static/css/main-style.css
@@ -945,3 +945,19 @@ label.header-profile {
       margin-top: 7px;
     }
 }
+
+@media screen and (max-width: 1150px) {
+  #specials-link {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1020px) {
+  #username-text {
+    display: none;
+  }
+
+  .header-profile {
+    padding-left: 5px;
+  }
+}
